--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,6 @@
         <version>3.4.0</version>
     </parent>
 
-
     <groupId>com.hotel</groupId>
     <artifactId>api-gateway</artifactId>
     <version>1.0.0-SNAPSHOT</version>
@@ -39,6 +38,12 @@
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-loadbalancer</artifactId>
+        </dependency>
+
+        <!-- Security + JWT (validacion con clave publica RSA) -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-oauth2-resource-server</artifactId>
         </dependency>
 
         <!-- Actuator -->
